--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>PNCP Dashboard</title>
+  <title>Dashboard PNCP</title>
 </head>
 <body>
   <h1>Dashboard PNCP</h1>
-  <div id="resultado"></div>
+  <pre id="resultado">Carregando...</pre>
   <script src="script.js"></script>
 </body>
 </html>
